# cascade

./: CMakeLists.txt  env.sh
configs/: derecho_n0.cfg  derecho_n1.cfg  derecho_n2.cfg
include/cascade/: object.hpp  service.hpp  service_client_api.hpp  service_types.hpp
include/cascade/detail/: service_impl.hpp
src/applications/demos/: CMakeLists.txt
src/applications/demos/dairy_farm/: ._cow_bcs  ._cow_id  ._model  CMakeLists.txt  dfgs.json  farm_image_client.cpp  farm_image_dpl.hpp  filter_dpl.cpp  infer_dpl.cpp  video_receive.py
src/applications/demos/dairy_farm/dairy_farm_cfg/n0/: derecho.cfg
src/applications/demos/dairy_farm/dairy_farm_cfg/n1/: derecho.cfg  dfgs.json
src/applications/demos/dairy_farm/dairy_farm_cfg/n2/: derecho.cfg
src/applications/demos/dairy_farm/dairy_farm_cfg/n3/: derecho.cfg
src/applications/demos/dairy_farm/dairy_farm_cfg/n4/: derecho.cfg  dpl_dlls.cfg
src/applications/demos/dairy_farm/dairy_farm_cfg/n5/: derecho.cfg
src/applications/tests/: CMakeLists.txt
src/applications/tests/data_path_logic/: CMakeLists.txt  cnn_classifier_dpl.cpp  video_receive.py
src/applications/tests/object_pool_metadata_test/: CMakeLists.txt  interactive_test.cpp  meta_example.cpp
src/applications/tests/object_pool_metadata_test/meta_example_cfg/n0/: derecho.cfg
src/applications/tests/object_pool_metadata_test/meta_example_cfg/n1/: derecho.cfg
src/applications/tests/object_pool_metadata_test/meta_example_cfg/n2/: derecho.cfg
src/applications/tests/object_pool_metadata_test/meta_example_cfg/n3/: derecho.cfg
src/applications/tests/object_pool_metadata_test/meta_example_cfg/n4/: derecho.cfg
src/core/: object.cpp
src/service/: CMakeLists.txt  client.cpp  fuse_client.cpp  fuse_client_context.hpp  server.cpp
src/service/cfg/n0/: derecho.cfg
src/service/cfg/n1/: derecho.cfg
src/service/cfg/n2/: derecho.cfg
src/service/cfg/n3/: derecho.cfg
src/service/cfg/n4/: derecho.cfg
src/service/cfg/n5/: derecho.cfg  dpl_dlls.cfg
src/service/cfg/n6/: derecho.cfg
src/service/data_path_logic/: ondata_dll.cpp
src/service/fuse/: fuse_client.cpp  fuse_client_context.hpp  testfuse.py  util.py
src/service/python/: cascade_py.cpp
